Fixed text overlap.

--- a/src/app/import/record-import-preview/record-import-preview.component.css
+++ b/src/app/import/record-import-preview/record-import-preview.component.css
@@ -5,3 +5,11 @@
 :host-context(.matches) * {
     color: black;
 }
+
+md-list-item.md-3-line{
+    height: auto !important;
+    }
+
+mat-list-item {
+    height: auto !important;
+}
